Name:               language-k
Version:            0.4.0
Synopsis:           Types and parsers for the K semantic framework
Homepage:           https://github.com/davidlazar/language-k
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           Language
Build-type:         Simple
Cabal-version:      >=1.2

source-repository head
  Type:             git
  Location:         https://github.com/davidlazar/language-k

Library
  ghc-options:      -Wall

  Hs-source-dirs:   src

  Exposed-modules:
    Language.K.Syntax
    Language.K.Parser

  Build-depends:
    base >= 4 && < 5,
    maude >= 0.6.1
